@@ -3,6 +3,14 @@
 	reviewed by: Benjamin Otte  <otte@gnome.org>
 
 	* daemon/gvfsbackendftp.c: (ftp_connection_use):
+	 Disable usage of "EPSV ALL". (fixes #547855). See in-source comment
+	 for the reasons.
+
+2008-11-17  Andreas Henriksson <andreas@fatal.se>
+
+	reviewed by: Benjamin Otte  <otte@gnome.org>
+
+	* daemon/gvfsbackendftp.c: (ftp_connection_use):
 	Use UTF8 when available.
 
 2008-11-17  Andreas Henriksson <andreas@fatal.se>
